# mondodb

./: .gitignore  CHANGELOG.md  CNAME  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.compat.config.ts  vitest.config.compat.ts  vitest.config.ts  vitest.node.config.ts  wrangler.jsonc  wrangler.toml
.beads/: interactions.jsonl  issues.jsonl  last-touched
.claude/design/: db-refactor.md
.github/workflows/: studio.yml
docs/: mdx-components.tsx  package-lock.json  package.json  tailwind.config.ts
docs.td/: index.mdx
sdks/clojure/: README.md  deps.edn  tests.edn
sdks/crystal/: README.md  shard.yml
sdks/dart/: README.md  analysis_options.yaml  pubspec.yaml
sdks/dotnet/: Mongo.Do.csproj  Mongo.Do.sln  README.md
sdks/elixir/: mix.exs
sdks/fsharp/: Mongo.Do.fsproj  README.md
sdks/go/: README.md  client.go  client_test.go  collection.go  collection_test.go  cursor.go  cursor_test.go  database.go  database_test.go  errors.go  errors_test.go  go.mod
sdks/java/: build.gradle.kts  settings.gradle.kts
sdks/kotlin/: build.gradle.kts
sdks/nim/: mongo_do.nimble
sdks/php/: composer.json  phpunit.xml
sdks/python/: README.md  pyproject.toml
sdks/python/src/mongo_do/: __init__.py  client.py  collection.py  cursor.py  database.py  types.py
sdks/python/tests/: conftest.py  test_client.py  test_collection.py
sdks/ruby/: Gemfile  README.md  Rakefile  mongo.do.gemspec
sdks/rust/: Cargo.toml
sdks/rust/src/: client.rs  collection.rs  cursor.rs  db.rs  error.rs  lib.rs
sdks/rust/tests/: client_test.rs
sdks/scala/: README.md  build.sbt
sdks/swift/: Package.swift
sdks/typescript/: README.md  package-lock.json  package.json  vitest.config.ts
src/: index.ts  server.ts  worker.ts
src/agentfs/: errors.ts  glob.ts  grep.ts  index.ts  kv-store.ts  mondo-agent.ts  toolcalls.ts  types.ts  vfs.ts
src/cli/: index.ts  mcp.ts  server.ts
src/client/: Collection.ts  Database.ts  MongoClient.ts  aggregation-cursor.ts  bulk-write.ts  change-stream.ts  cursor.ts  http-cursor.ts  index.ts  mongo-client.ts  mongo-collection.ts  mongo-cursor.ts  mongo-database.ts  session.ts
src/durable-object/: index-manager.ts  index.ts  mcp-handler.ts  migrations.ts  mondo-database.ts  schema.ts
src/embedding/: document-serializer.ts  embedding-manager.ts  embedding-provider.ts  index.ts
src/executor/: aggregation-executor.ts  function-executor.ts  index.ts  vector-search-executor.ts
src/mcp/: agent.ts  cli.ts  index.ts  server.ts  tool-call-auditor.ts  types.ts
src/rpc/: endpoint.ts  index.ts  rpc-client.ts  rpc-target.ts  worker-entrypoint.ts
src/storage/: libsql-adapter.ts  libsql-vector-adapter.ts  types.ts  vector-storage-adapter.ts  vector-types.ts
src/studio/: index.ts  vitest.config.ts
src/translator/: aggregation-translator.ts  dialect.ts  geo-translator.ts  hybrid-translator.ts  index.ts  query-translator.ts  search-highlight.ts  search-translator.ts  update-translator.ts  vector-translator.ts
src/types/: env.ts  function.ts  index.ts  mongodb.ts  objectid.ts  rpc.ts  vectorize.ts
src/utils/: sql-safety.ts
src/validation/: document-validator.ts
src/vectorize/: document-serializer.ts
src/wire/: index.ts  message.ts  server.ts  (+1 more)
studio/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
test/: setup.ts
(+861 files in other folders)
