[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongo-do"
version = "0.1.0"
description = "MongoDB on the Edge - PyMongo-compatible async client for .do services"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "DotDo", email = "sdk@dotdo.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["mongodb", "pymongo", "async", "dotdo", "edge", "database"]
dependencies = [
    # rpc-do is the underlying RPC transport
    # Uncomment when rpc-do is published to PyPI:
    # "rpc-do>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "mongo-do[test]",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://dotdo.dev"
Documentation = "https://dotdo.dev/docs/python/mongo"
Repository = "https://github.com/dotdo-dev/mongo-do-python"

[tool.hatch.build.targets.wheel]
packages = ["src/mongo_do"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src/mongo_do --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/mongo_do"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
