[package]
name = "mongo-do"
version = "0.1.0"
edition = "2021"
description = "MongoDB-compatible SDK for the .do platform - High-performance async MongoDB driver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dotdo-ai/capnweb"
keywords = ["mongodb", "database", "async", "rpc"]
categories = ["database", "asynchronous", "network-programming"]

[lib]
name = "mongo_do"
path = "src/lib.rs"

[features]
default = ["tokio-runtime"]
tokio-runtime = []

[dependencies]
# RPC transport layer
rpc-do = { path = "../../../../packages/rust/rpc" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# BSON support
bson = { version = "2", features = ["chrono-0_4"] }

# Error handling
thiserror = "1"

# Futures utilities
futures = "0.3"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
pretty_assertions = "1"

[[test]]
name = "client_test"
path = "tests/client_test.rs"
